# MiroThinker

./: test_offline_rag.py
apps/miroflow-agent/: pyproject.toml  run_test.sh  sglang_launch_mirothinker_v1.0.sh  sglang_launch_mirothinker_v1.5.sh
apps/miroflow-agent/benchmarks/: common_benchmark.py
apps/miroflow-agent/benchmarks/evaluators/: eval_utils.py
apps/miroflow-agent/conf/agent/: mirothinker_v1.0_keep5_offline.yaml  mirothinker_v1.0_keep5_widesearch.yaml  mirothinker_v1.5_keep5_max200_widesearch.yaml  multi_agent_mirothinker_v1.0_8b.yaml  multi_agent_mirothinker_v1.0_8b_offline.yaml
apps/miroflow-agent/conf/benchmark/: 2wikimultihopqa.yaml  bamboogle.yaml  hotpotqa.yaml  musique.yaml  nq.yaml  popqa.yaml  triviaqa.yaml  widesearch.yaml
apps/miroflow-agent/conf/llm/: qwen-3.yaml
apps/miroflow-agent/scripts/: prepare_asearcher_data.py  run_asearcher_benchmarks.sh  run_asearcher_benchmarks_multiagent_offline.sh  run_asearcher_benchmarks_offline.sh  run_asearcher_benchmarks_parallel.sh  run_widesearch_trajectory.sh  run_widesearch_trajectory_mirothinker_v1.0_multi_agent.sh  run_widesearch_trajectory_mirothinker_v1.0_single_agent.sh  smoke_test.sh  smoke_test_multiagent_offline.sh  smoke_test_offline.sh
apps/miroflow-agent/src/config/: settings.py
apps/miroflow-agent/src/llm/providers/: openai_client.py
libs/miroflow-tools/src/miroflow_tools/dev_mcp_servers/: jina_scrape_llm_summary.py
libs/miroflow-tools/src/miroflow_tools/mcp_servers/: offline_rag_mcp_server.py  searching_google_mcp_server.py
widesearch_format_transform/: append_final_box_answer.py  append_final_box_answer_multi_agent.py  format_transform.py  response_post_process.py
